--- a/ScrabbleBot/ScrabbleBot.fsproj
+++ b/ScrabbleBot/ScrabbleBot.fsproj
@@ -28,6 +28,9 @@
     <Reference Include="ScrabbleUtil, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\dlls\ScrabbleUtil.dll</HintPath>
     </Reference>
+    <Reference Include="ScrabbleLib, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\dlls\ScrabbleLib.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
